--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
     </title>
 <body>
     <h1>
-        This is my first website!
+        This is my first website! w/o h2
     </h1>
     <h2>
         This is a h2 line
