Abit of bugs, but working

--- a/module-2/index.html
+++ b/module-2/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My First Web</title>
-    <body>
+        <title>Responsive Web Page</title>
 
+        <link rel="stylesheet" href="css/style.css">
+    <body>
+        <h1>
+            My first responsive web page
+        </h1>
+
+        <div id="section1">
+                <h3 id="title1">
+                    Title 1
+                </h3>
+                1. Lorem ipsum dolor sit amet consectetur, 
+                adipisicing elit. Perspiciatis recusandae ullam sit, 
+                provident et pariatur doloremque? Fugit sequi aspernatur, 
+                commodi, at laudantium eos, tenetur voluptatem suscipit 
+                cupiditate voluptatum reiciendis facere.
+
+        </div>
+
+        <div id="section2">
+            <h3 id="title2">
+                Title 2
+            </h3>
+                2. Lorem ipsum dolor sit amet consectetur, 
+                adipisicing elit. Perspiciatis recusandae ullam sit, 
+                provident et pariatur doloremque? Fugit sequi aspernatur, 
+                commodi, at laudantium eos, tenetur voluptatem suscipit 
+                cupiditate voluptatum reiciendis facere.
+
+        </div>
+            
+        <div id="section3">
+            <h3 id="title3">
+                Title 3
+            </h3>
+                3. Lorem ipsum dolor sit amet consectetur, 
+                adipisicing elit. Perspiciatis recusandae ullam sit, 
+                provident et pariatur doloremque? Fugit sequi aspernatur, 
+                commodi, at laudantium eos, tenetur voluptatem suscipit 
+                cupiditate voluptatum reiciendis facere.
+        </div>
     </body>       
     </head>
 </html>
